hphp/hack/test/ifc/check/inheritance.php.exp
=== IFC analysis results for inheritance.php
File "inheritance.php", line 22, characters 3-16:
Data with policy `P3` appears in context `P2`. (Typing[4379])
  File "inheritance.php", line 17, characters 14-19:
  This may be the data source with policy `P3`
  File "inheritance.php", line 10, characters 14-19:
  This may be the data sink with policy `P2`
File "inheritance.php", line 21, characters 3-16:
Data with policy `P3` appears in context `P1`. (Typing[4379])
  File "inheritance.php", line 17, characters 14-19:
  This may be the data source with policy `P3`
  File "inheritance.php", line 5, characters 14-19:
  This may be the data sink with policy `P1`
